# migrate_sermonmanager_to_tithely

./: .env.example  .gitignore  AGENTS.md  NOTES.md  README.md  analyze_audio_url_patterns.py  analyze_content_details.py  analyze_series_column.py  analyze_sermons.py  analyze_sizes.py  analyze_standalone_sermons.py  analyze_wordpress_export.py  check_urls.py  classify_sermons_v2.py  classify_sermons_v4.py  clean_content_text.py  clean_csv.py  clean_sermons.py  compare_and_annotate.py  compare_data.py  convert_csv_to_json.py  convert_to_csv.py  detailed_analysis.py  diagnose_csv.py  enrich_feed.py  fetch_commands.py  fetch_wordpress_export.py  final_clean.py  find_potential_series.py  find_potential_series_v2.py  fix_guids.py  fix_remaining_issues.py  generate_detailed_discrepancy_report.py  generate_discrepancy_report.py  generate_fetch_commands.py  generate_missing_sermons_feed.py  generate_rss_feed.py  generate_transcription_script.py  get_csv_file_sizes.py  json2csv.rb  (+15 more)
mcp_server/: README.md  main.py  tithely_manager.py
sermon-archive/: deploy.bash  stalfreds-sermons.html
sermon_manager/: README.md  TODO.md  core.py  sermon_manager.py  utils.py
tithely_metadata_update/: .env.example  add_file_sizes.py  analysis_and_grouping.py  analyze_updates.py  batch_update_descriptions.py  delete_duplicates.py  edit_page_with_speaker_and_podcast_ids.js  enrich_local_sermons_with_audio_size.py  enrich_sermon_details.py  example_tithely_sermon_list_dom.html  fetch_new_sermons.py  find_and_enrich_missing_sermons.py  find_duplicates.py  generate_update_report.py  run_analyzer.py  (+8 more)
